--- a/jun_springboot_admin_layui/src/main/resources/views/admin/view/system/weblog.html
+++ b/jun_springboot_admin_layui/src/main/resources/views/admin/view/system/weblog.html
@@ -28,7 +28,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">日志名称:</label>
                 <div class="layui-input-inline">
-                    <input id="packgeName" type="text" placeholder="com.laker.admin"
+                    <input id="packgeName" type="text" placeholder="com.jun.plugin"
                            class="layui-input">
                 </div>
 
