--- a/jun_springboot_admin_layui/src/main/resources/views/admin/view/flow/processList.html
+++ b/jun_springboot_admin_layui/src/main/resources/views/admin/view/flow/processList.html
@@ -11,7 +11,7 @@
         <form class="layui-form" action="">
             <div class="layui-form-item">
                 <div class="layui-form-item layui-inline">
-                    <label class="layui-form-label">名称</label>
+                    <label class="layui-form-label">名称1</label>
                     <div class="layui-input-inline">
                         <input type="text" name="name" placeholder="" class="layui-input">
                     </div>
@@ -19,7 +19,7 @@
                 <div class="layui-form-item layui-inline">
                     <button class="pear-btn pear-btn-md pear-btn-primary" lay-submit lay-filter="user-query">
                         <i class="layui-icon layui-icon-search"></i>
-                        查询
+                        查询1
                     </button>
                     <button type="reset" class="pear-btn pear-btn-md">
                         <i class="layui-icon layui-icon-refresh"></i>
@@ -74,6 +74,14 @@
         let $ = layui.jquery;
         let common = layui.common;
         let easyAdmin = layui.easyAdmin;
+        
+// 	    layui.data('easyAdmin', {
+// 	       key: 'serverUrl'
+// 	       , value: 'http://localhost:8081'
+// 	   });
+	   var adminServerUrl = layui.data('easyAdmin').serverUrl;
+    	console.log('服务端地址1111:' + adminServerUrl);
+    
         let cols = [
             [
                 {
