--- a/jun_springboot_admin_layui/src/main/resources/templates/error/404.html
+++ b/jun_springboot_admin_layui/src/main/resources/templates/error/404.html
@@ -22,6 +22,9 @@
 <div class="layui-container" style="text-align: center;margin-top: 20px;">
     <h1>404</h1>
     <h3>您访问的页面好像不存在哦！</h3>
+    <br>
+    <br>
+    <h3 style="color: blue;"><a href="http://localhost:8081">点击返回首页</a></h3>
 </div>
 </body>
 <script>
