--- a/jun_springboot_admin_layui/src/main/resources/templates/index.html
+++ b/jun_springboot_admin_layui/src/main/resources/templates/index.html
@@ -74,7 +74,7 @@
 	                </dl>
 	            </li> -->
                 <li class="layui-nav-item layuimini-setting">
-                    <a href="javascript:;">admin</a>
+                    <a href="javascript:;"><span id="nickName">guest</span></a>
                     <dl class="layui-nav-child">
                         <dd>
                             <a href="javascript:;" layuimini-content-href="/index/users/info" data-title="基本资料" data-icon="fa fa-gears">基本资料<span class="layui-badge-dot"></span></a>
